# netcup-scp-cli

./: CHANGELOG.md  README.md  openapi.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/netcup_cli/: __init__.py  client.py
src/netcup_cli/api/: s3_upload.py  servers.py  servers_guest.py  user_isos.py
src/netcup_cli/cli/: servers_cmd.py  servers_misc_cmd.py
src/netcup_scp_cli/: __init__.py  __main__.py  auth.py  config.py  exceptions.py  output.py
src/netcup_scp_cli/api/: __init__.py  base.py  maintenance.py  rdns.py  s3_upload.py  servers.py  servers_disks.py  servers_gpu.py  servers_image.py  servers_interfaces.py  servers_iso.py  servers_logs.py  servers_metrics.py  servers_rescue.py  servers_snapshots.py  servers_storage.py  tasks.py  user_failoverips.py  user_firewall_policies.py  user_images.py  user_isos.py  user_logs.py  user_ssh_keys.py  user_vlans.py  users.py
src/netcup_scp_cli/cli/: auth_cmd.py  helpers.py  main.py  maintenance_cmd.py  rdns_cmd.py  servers_disks_cmd.py  servers_interfaces_cmd.py  servers_iso_cmd.py  servers_metrics_cmd.py  servers_rescue_cmd.py  servers_snapshots_cmd.py  tasks_cmd.py  users_cmd.py  users_resources_cmd.py  vlans_cmd.py
tests/: openapi_coverage.py  test_config.py  test_openapi_coverage.py  test_s3_upload.py  test_upload_cli.py
