[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netcup-scp-cli"
version = "1.0.0"
description = "CLI for netcup SCP (Server Control Panel) REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pavel Pikta" }]
keywords = ["netcup", "scp", "server-control-panel", "cli", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "responses>=0.25.0",
]

[project.scripts]
netcup = "netcup_scp_cli.cli.main:cli"

[project.urls]
Homepage = "https://github.com/pavelpikta/netcup-cli"
Repository = "https://github.com/pavelpikta/netcup-cli"
Issues = "https://github.com/pavelpikta/netcup-cli/issues"
Changelog = "https://github.com/pavelpikta/netcup-cli/blob/main/CHANGELOG.md"
Documentation = "https://forum.netcup.de/netcup-anwendungen/scp-server-control-panel/scp-server-control-panel-rest-api/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
